add kotac chapter

--- a/macrosMain.tex
+++ b/macrosMain.tex
@@ -32,6 +32,8 @@
 \newcommand{\trans}[2]{\mathcal{T}_{#1} \llbracket #2 \rrbracket}
 
 \newcommand{\HFC}{HFC}
+\newcommand{\Scafi}{{\sc{}ScaFi}\xspace}
+\newcommand{\Kotac}{{\sc{}KotAC}\xspace}
 \newcommand{\FSCAFI}{{\sc{}FScaFi}\xspace}
 \newcommand{\FSCAFIi}{{\sc{}FScaFi$'$}\xspace}
 \newcommand{\FeatherweightSCAFI}{{\sc{}Featherweight ScaFi}\xspace}
