--- a/main.tex
+++ b/main.tex
@@ -26,11 +26,11 @@
 
 \input{src/30-protelis.tex}
 
-\chapter{Scafi}\label{chap:scafi}
+\chapter{\Scafi{}}\label{chap:scafi}
 
 \input{src/40-scafi.tex}
 
-\chapter{Differences between Scafi semantics and field calculus}\label{chap:comparison}
+\chapter{Differences between \Scafi{} semantics and field calculus}\label{chap:comparison}
 
 \input{src/45-comparison.tex}
 
@@ -38,7 +38,7 @@
 
 \input{src/50-kotlin.tex}
 
-\chapter{KotAC}\label{chap:kotac}
+\chapter{\Kotac{}}\label{chap:kotac}
 
 \input{src/60-kotac.tex}
 
