--- a/src/20-aggregate-programming.tex
+++ b/src/20-aggregate-programming.tex
@@ -78,6 +78,7 @@ A \textit{function value} $\funvalue$ can be a built-in function $\bname$, a dec
 \section{Field Calculus Semantic}
 
 \begin{figure}[!t]{
+ \scalebox{0.85}{
  $\begin{array}{l}
  \textbf{Value-trees and value-tree environments:}\\
 \begin{array}{lcl@{\hspace{6.8cm}}r}
@@ -252,6 +253,7 @@ A \textit{function value} $\funvalue$ can be a built-in function $\bname$, a dec
 }
 \end{array}
 \end{array}$
+}
 }
  \caption{Big-step operational semantics adapted from \cite{FieldCalculus}.} \label{fig:deviceSemantics}
 \end{figure}
