--- a/src/bibliography.bib
+++ b/src/bibliography.bib
@@ -98,7 +98,7 @@ volume = {7},
 journal = {Journal of Simulation},
 doi = {10.1057/jos.2012.27}
 }
-@inproceedings{Scafi,
+@inproceedings{ScafiFirst,
 author = {Casadei, Roberto and Viroli, Mirko},
 title = {Towards Aggregate Programming in Scala},
 year = {2016},
@@ -134,7 +134,7 @@ author = {Google LLC},
 title = {Android | The platform pushing what’s possible},
 howpublished = {https://www.android.com/}
 }
-@phdthesis{scafiphd,
+@phdthesis{Scafi,
             year = {2020},
           school = {alma},
            title = {Engineering Self-Adaptive Collective Processes for Cyber-Physical Ecosystems},
@@ -511,4 +511,19 @@ Picco},
         Pages = {78--87},
         Title = {Region Streams: Functional Macroprogramming for Sensor Networks},
         Year = {2004}
+}
+@mist{Travis,
+author = {Travis CI},
+title = {Travis CI - Test and Deploy Your Code with Confidence},
+howpublished = {https://travis-ci.org/}
+}
+@mist{Gradle,
+author = {Gradle Inc.},
+title = {Gradle Build Tool},
+howpublished = {https://gradle.org/}
+}
+@mist{ktlint,
+author = {Pinterest},
+title = {ktlint - An anti-bikeshedding Kotlin linter with built-in formatter},
+howpublished = {https://github.com/pinterest/ktlint}
 }
