--- a/src/cover.tex
+++ b/src/cover.tex
@@ -12,21 +12,21 @@
 
 \centerline {\Large{Computer Science Department}}
 
-\vskip 35 pt
+\vskip 30 pt
 
 \centerline {\includegraphics[width=5cm]{imgs/logo_ateneo.jpg}}
 
-\vskip 30 pt
+\vskip 25 pt
 
 \centerline {\Large {Master Thesis}}
 
-\vskip 35 pt
+\vskip 30 pt
 
 \centerline {\Large {\bf A DOMAIN SPECIFIC LANGUAGE FOR}}
 \vskip 5 pt
 \centerline {\Large {\bf AGGREGATE PROGRAMMING}}
 
-\vskip 60 pt
+\vskip 40 pt
 
 \hspace{.7cm}{\textbf{Supervisor}} \hspace{13.7cm} \textbf{Opponent}
 
@@ -40,13 +40,13 @@
 
 \vskip 4 pt
 
-\hspace{.7cm}{Dr. Audrito Giorgio}
+\hspace{.7cm}{Dr. Giorgio Audrito}
 
 \vskip 4 pt
 
-\hspace{.7cm}{Dr. Pianini Danilo}
+\hspace{.7cm}{Dr. Danilo Pianini}
 
-\vskip 21 pt
+\vskip 16 pt
 
 \centerline {\textbf{Candidate}}
 
@@ -54,12 +54,17 @@
 
 \centerline {Lorenzo Testa}
 
-\vskip 19 pt
+\vskip 14 pt
 
 \centerline{\bf October 2020}
 
 \vskip 2 pt
 
 \centerline{a.y.  2019 / 2020}
+
+\vskip 14 pt
+
+\centerline{\footnotesize I declare that, as auther of the document, I'm responsible for its content, and for parts taken from}
+\centerline{\footnotesize other works credit is explicity given to others by citation or acknowledgement}
 
 \restoregeometry
